srcs/ftps.yaml
apiVersion: v1  
kind: Service
metadata:
  name: ftps-service
spec:
  type: NodePort
  selector:
    app: ftps
  ports:
    - name: ftps
      port: 21
      nodePort: 21
    - name: ftps-passive
      port: 30020
      nodePort: 30020

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
  labels:
    app: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 21
        - containerPort: 30020
        livenessProbe:
          exec:
            command:
            - pgrep
            - vsftpd
          initialDelaySeconds: 3
          periodSeconds: 3
