srcs/mysql.yaml
apiVersion: v1  
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - targetPort: 3306
      port: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command:
            - pgrep
            - mysqld
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-volume-claim
