srcs/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/liveness.sh
          initialDelaySeconds: 3
          periodSeconds: 3

---
  
apiVersion: v1  
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app : nginx
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - targetPort: 80
      port: 80
      name: http
    - targetPort: 443
      port: 443
      name: https


---
  
apiVersion: v1  
kind: Service
metadata:
  name: nginx-service-ssh
spec:
  type: NodePort
  selector:
    app : nginx
  ports:
    - targetPort: 30010
      port: 30010
      nodePort: 30010
      name: ssh
